# adc-therapeutic-index

./: README.md  pyproject.toml
data/: adc_candidates.csv
examples/: dose_selection.py  multianalyte_pk.py
src/adcti/: __init__.py  doseselect.py  figures.py  pd.py  pk.py
tests/: test_doseselect.py  test_pk.py
