[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adcti"
version = "0.1.0"
description = "Multi-analyte ADC PK/PD and exposure-driven dose selection (the toxicology paradigm)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bo Ma" }]
keywords = ["pharmacometrics", "ADC", "antibody-drug conjugate", "PKPD", "DAR", "dose selection", "MIDD"]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
